force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Active_Case_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Active_Case_Deliverables__c</fullName>
    <label>Active Case Deliverables</label>
    <summaryFilterItems>
        <field>Project_Deliverables__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Project_Deliverables__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Case Deliverable</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Deliverables__c.Work_Breakdown_Structure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>