force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <label>Case Record Type Managed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abandoned Plan Review</fullName>
            </value>
            <value>
                <fullName>At Risk Client</fullName>
            </value>
            <value>
                <fullName>Billing Cases</fullName>
            </value>
            <value>
                <fullName>Business Intelligence Cases</fullName>
            </value>
            <value>
                <fullName>Client Feedback</fullName>
            </value>
            <value>
                <fullName>Compliance Cases</fullName>
            </value>
            <value>
                <fullName>Distributions Cases</fullName>
            </value>
            <value>
                <fullName>Force Out Distribution</fullName>
            </value>
            <value>
                <fullName>Implementations Cases</fullName>
            </value>
            <value>
                <fullName>JIRA Submission</fullName>
            </value>
            <value>
                <fullName>Marketing Cases</fullName>
            </value>
            <value>
                <fullName>Operations Cases</fullName>
            </value>
            <value>
                <fullName>Partnership Support</fullName>
            </value>
            <value>
                <fullName>Payroll Inbox</fullName>
            </value>
            <value>
                <fullName>Payroll Koncierge</fullName>
            </value>
            <value>
                <fullName>PRKS</fullName>
            </value>
            <value>
                <fullName>Product Innovation Cases</fullName>
            </value>
            <value>
                <fullName>Reconciliations &amp; Withdrawals</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>SaverSuccess</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Shared Team Case</fullName>
            </value>
            <value>
                <fullName>Simply TPA</fullName>
            </value>
            <value>
                <fullName>Single(k) Cases</fullName>
            </value>
            <value>
                <fullName>Transitions Cases</fullName>
            </value>
            <value>
                <fullName>Web Form Servicing</fullName>
            </value>
            <value>
                <fullName>ZenOps Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>