force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Eligible_for_Testing__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Testing</label>
    <type>Checkbox</type>
</CustomField>