force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Global_Default__c.field-meta.xml
<CustomField>
    <fullName>Global_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Default</label>
    <type>Checkbox</type>
</CustomField>