force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Plan</fullName>
            </value>
            <value>
                <fullName>Conversion Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>