force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <label>Service Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simply Retirement Bundled</fullName>
            </value>
            <value>
                <fullName>Legacy Saver(k), Saver(k), Express(k), Custom(k), Reserve(k)</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Legacy Saver(k), Saver(k), Express(k), Custom(k), Reserve(k), Single(k), Single(k) Lite</fullName>
            </value>
            <value>
                <fullName>Single(k) Plus</fullName>
            </value>
            <value>
                <fullName>RK Only, Legacy Saver(k), Saver(k), Express(k), Custom(k), Reserve(k)</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Unbundled</fullName>
            </value>
            <value>
                <fullName>RK Only, Legacy Saver(k), Saver(k), Express(k), Custom(k), Reserve(k), Simply Retirement Bundled, Simply Retirement Unbundled, Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Starter, Partner, Builder, Franchise</fullName>
            </value>
            <value>
                <fullName>Enhanced Payroll Service</fullName>
            </value>
            <value>
                <fullName>Direct Integration</fullName>
            </value>
            <value>
                <fullName>RK Only, Legacy Saver(k), Saver(k), Express(k), Custom(k), Reserve(k), Simply Retirement Bundled, Simply Retirement Unbundled, Simply Retirement, Starter, Partner, Builder, Franchise</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Bundled, Simply Retirement Unbundled, Simply Retirement, Starter, Partner, Builder, Franchise</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Unbundled, Simply Retirement Bundled</fullName>
            </value>
            <value>
                <fullName>RK Only, Legacy Saver(k), Saver(k), Express(k), Custom(k), Reserve(k), Single(k) Plus</fullName>
            </value>
            <value>
                <fullName>RK Only, Legacy Saver(k), Saver(k), Express(k), Custom(k), Reserve(k), Single(k) Plus, Custom(k) MML</fullName>
            </value>
            <value>
                <fullName>RK Only, Legacy Saver(k), Saver(k), Express(k), Custom(k), Reserve(k), Single(k) Plus, Custom(k) MML, Partner, Starter, Franchise, Builder</fullName>
            </value>
            <value>
                <fullName>Custom(k)</fullName>
                <isActive>false</isActive>
                <label>Custom(k)</label>
            </value>
            <value>
                <fullName>Saver(k)</fullName>
                <isActive>false</isActive>
                <label>Saver(k)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>