force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Transition_Type__c.field-meta.xml
<CustomField>
    <fullName>Transition_Type__c</fullName>
    <label>Transition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k) Deconversion</fullName>
            </value>
            <value>
                <fullName>401(k) Plan Abandonment</fullName>
            </value>
            <value>
                <fullName>401(k) Term/Merger</fullName>
            </value>
            <value>
                <fullName>401(k) Termination</fullName>
            </value>
            <value>
                <fullName>401(k) to Single(k) Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>