force-app/main/default/objects/Work_Breakdown_Structure__c/recordTypes/Case_WBS.recordType-meta.xml
<RecordType>
    <fullName>Case_WBS</fullName>
    <active>true</active>
    <label>Case WBS</label>
</RecordType>