force-app/main/default/objects/Work_Breakdown_Structure__c/recordTypes/Default_WBS.recordType-meta.xml
<RecordType>
    <fullName>Default_WBS</fullName>
    <active>true</active>
    <label>Default WBS</label>
</RecordType>