force-app/main/default/objects/Work_Breakdown_Structure__c/recordTypes/Transitions_WBS.recordType-meta.xml
<RecordType>
    <fullName>Transitions_WBS</fullName>
    <active>true</active>
    <label>Transitions WBS</label>
</RecordType>