force-app/main/default/objects/Work_Breakdown_Structure__c/validationRules/Active_Case_WBS_Active_PD_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Case_WBS_Active_PD_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Active_Case_Deliverables__c &lt; 1
&amp;&amp;
 Active__c = TRUE
&amp;&amp;
CONTAINS( RecordTypeId ,  &quot;0121G000000bqxe&quot;)</errorConditionFormula>
    <errorMessage>An active WBS must have at least one active deliverable</errorMessage>
</ValidationRule>