force-app/main/default/objects/Work_Breakdown_Structure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Service_Option__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>