force-app/main/default/objects/Work_Breakdown_Structure__c/listViews/Imp_WBS.listView-meta.xml
<ListView>
    <fullName>Imp_WBS</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Managed__c</field>
        <operation>equals</operation>
        <value>Implementation</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Imp WBS</label>
</ListView>