force-app/main/default/objects/Work_Breakdown_Structure__c/listViews/WBS_by_Object_Controller.listView-meta.xml
<ListView>
    <fullName>WBS_by_Object_Controller</fullName>
    <columns>NAME</columns>
    <columns>Object_Managed__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>WBS by Object Managed</label>
</ListView>